[package]
name = "myux"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_Security",
  "Win32_System_SystemServices",

  "Win32_Storage_FileSystem",   # for ReadFile + WriteFile modules
  "Win32_System_IO",            # <- REQUIRED for ReadFile/WriteFile
]}

crossterm = "0.28"
vt100 = "0.15"